# api/oas-doc.yaml
@@ -33,12 +33,17 @@ paths:
         content:
           application/json:
             schema:
+              type: string
               $ref: '#/components/schemas/recipesbook'
         description: RecipesBook to be created
         required: true
       responses:
         201:
           description: RecipesBook
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/recipesbook'
         default:
             description: Unexpected error
             content:
